tdf#118452 Don't crash when multi thread calculation is disabled

...by default configuration.

Change-Id: If6075ae66537f613434dd38766324436f2426517
Reviewed-on: https://gerrit.libreoffice.org/56840
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit e119194aeec907f3d02cb914e5afde5ac763df7c)
Reviewed-on: https://gerrit.libreoffice.org/56856
(cherry picked from commit 41a780a589151afa1159403231c59c57bc8a1bc8)